--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "antd": "^5.9.4",
     "bootstrap": "^5.3.2",
+    "i18next": "^23.7.16",
+    "i18next-http-backend": "^2.4.2",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
