--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "antd": "^5.9.4",
     "bootstrap": "^5.3.2",
     "i18next": "^23.7.16",
