--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
+    "@react-spring/three": "*",
     "antd": "^5.9.4",
     "bootstrap": "^5.3.2",
     "i18next": "^23.7.16",
