--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-spring/web": "^9.7.3",
     "@react-spring/three": "*",
+    "@react-spring/web": "^9.7.3",
     "antd": "^5.9.4",
     "bootstrap": "^5.3.2",
     "i18next": "^23.7.16",
     "i18next-http-backend": "^2.4.2",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
@@ -28,9 +30,12 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
