--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.16.0",
     "styled-components": "^6.1.8"
   },
